Consistently format linkl tables

--- a/comics/2.md
+++ b/comics/2.md
@@ -1,5 +1,5 @@
 # #2: Bubble Trouble
 
-[Previous Comic](1) | [Next Comic](3)
+| [Previous Comic](1) | [Next Comic](3) |
 
 ![comic](../assets/comics/2.jpeg)
