--- a/comics/3.md
+++ b/comics/3.md
@@ -1,5 +1,5 @@
 # #3: BOTTLE FLIP!
 
-[Previous Comic](2) | [Next Comic](4)
+| [Previous Comic](2) | [Next Comic](4) |
 
 ![comic](../assets/comics/3.jpeg)
