added fifth comic (first Sunday)

--- a/comics/4.md
+++ b/comics/4.md
@@ -1,5 +1,5 @@
 # #4: Not the Best Surgeon
 
-| [Previous Comic](3) |  |
+| [Previous Comic](3) |  [Next Comic](5)  |
 
 ![comic](../assets/comics/4.jpeg)
