added sixth comic

--- a/comics/5.md
+++ b/comics/5.md
@@ -1,5 +1,5 @@
 # #5: It's Comp-icated
 
-|  [Previous Comic](4)  | |
+|  [Previous Comic](4)  | [Next Comic](6) |
 
 ![comic](../assets/comics/5.jpeg)
