added eighth comic

--- a/comics/7.md
+++ b/comics/7.md
@@ -1,5 +1,5 @@
 # #7: You're a Wizard, Maurice
 
-|  [Previous Comic](6) | |
+|  [Previous Comic](6) | [Next Comic](8) |
 
 ![comic](../assets/comics/7.jpeg)
