--- a/comics/8.md
+++ b/comics/8.md
@@ -1,5 +1,5 @@
 # #8: Poetry? More Like Poe-tried
 
-|  [Previous Comic](7) | |
+|  [Previous Comic](7) | [Next Comic](9) |
 
 ![comic](../assets/comics/8.jpeg)
